objects/maps__ShapeLayerGeometry__c.object
<CustomObject>
    <fields>
        <fullName>ACV_Territory_ID__c</fullName>
        <formula>maps__ShapeLayer__r.ACV_Territory_ID__c</formula>
        <label>ACV Territory ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shape_Layer_Folder_Name__c</fullName>
        <formula>maps__ShapeLayer__r.maps__Folder__r.Name</formula>
        <label>Shape Layer Folder Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shape_Layer_Parent_Folder_Name__c</fullName>
        <formula>maps__ShapeLayer__r.maps__Folder__r.maps__ParentFolder__r.Name</formula>
        <label>Shape Layer Parent Folder Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Guid__c</fullName>
        <formula>maps__ShapeLayer__r.Territory_Guid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Guid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zips__c</fullName>
        <description>Populated via workflow rule &amp; field update to display clean zips for use cases</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Zips</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Geometry10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geometry 10</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Geometry2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geometry 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Geometry3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Geometry 3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__GeometrySize__c</fullName>
        <label>Geometry Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__ShapeLayer__c</fullName>
        <label>Maps Shape Layer</label>
        <referenceTo>maps__ShapeLayer__c</referenceTo>
        <relationshipLabel>Shape Layers Geometries</relationshipLabel>
        <relationshipName>ShapeLayerGeometries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Maps Shape Layer Geometry</label>
    <listViews>
        <fullName>maps__All</fullName>
        <columns>NAME</columns>
        <columns>ACV_Territory_ID__c</columns>
        <columns>maps__ShapeLayer__c</columns>
        <columns>Shape_Layer_Folder_Name__c</columns>
        <columns>Shape_Layer_Parent_Folder_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Geometry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Shape Layer Geometries</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>